    - Removed the deprecated `GoogleAnalyticsToSplit` and `SplitToGoogleAnalytics` pluggable integration modules, along with the related interfaces in the TypeScript definitions.

0.15.0 (September 13, 2024)
 - Updated @splitsoftware/splitio-commons package to version 1.17.0 that includes minor updates:
    - Added `sync.requestOptions.getHeaderOverrides` configuration option to enhance SDK HTTP request Headers for Authorization Frameworks.
    - Updated some transitive dependencies for vulnerability fixes.

0.14.1 (June 14, 2024)
 - Updated @splitsoftware/splitio-commons package to version 1.16.0 that includes some vulnerability and bug fixes.
 - Bugfixing - Restored some input validation error logs that were removed in version 0.12.0. The logs inform the user when the `getTreatment(s)` methods are called with an invalid value as feature flag name or flag set name.
 - Bugfixing - Fixed localhost mode to emit SDK_UPDATE when mocked feature flags are updated in the `features` object map of the config object (Related to issue https://github.com/splitio/javascript-browser-client/issues/119).

0.14.0 (May 6, 2024)
 - Updated @splitsoftware/splitio-commons package to version 1.14.0 that includes minor updates:
    - Added support for targeting rules based on semantic versions (https://semver.org/).
    - Added special impression label "targeting rule type unsupported by sdk" when the matcher type is not supported by the SDK, which returns 'control' treatment.
    - Updated Split API client to include the flags spec version query parameter for the `splitChanges` and `auth` endpoints.

0.13.2 (March 26, 2024)
 - Updated some transitive dependencies for vulnerability fixes.
 - Bugfixing - Added tslib as an explicit dependency to avoid issues with some package managers that don't resolve it automatically as a transitive dependency from @splitsoftware/splitio-commons (Related to issue https://github.com/splitio/javascript-client/issues/795).

0.13.1 (January 18, 2024)