@@ -33,10 +33,6 @@ const config = {
     events: 'https://events.baseurl/impressionsSuite',
     telemetry: 'https://telemetry.baseurl/impressionsSuite'
   },
-  sync: {
-    // ignored
-    largeSegmentsEnabled: true,
-  },
 };
 
 tape('Browser Consumer Partial mode with pluggable storage', function (t) {
