@@ -3,7 +3,7 @@ import sinon from 'sinon';
 import fetchMock from '../testUtils/fetchMock';
 import { url } from '../testUtils';
 import { SplitFactory, InLocalStorage } from '../../full';
-import { SplitFactory as SplitFactorySlim, LocalhostFromObject } from '../../';
+import { SplitFactory as SplitFactorySlim } from '../../';
 import { settingsFactory } from '../../settings';
 
 const settings = settingsFactory({ core: { key: 'facundo@split.io' } });
@@ -61,10 +61,6 @@ tape('Browser offline mode', function (assert) {
       readyTimeout: 0.001
     },
     features: originalFeaturesMap,
-    sync: {
-      // ignored
-      largeSegmentsEnabled: true,
-    }
   };
   const factory = SplitFactory(config);
   const manager = factory.manager();
@@ -94,24 +90,19 @@ tape('Browser offline mode', function (assert) {
 
   const factoriesReadyFromCache = [
     SplitFactory({ ...config, storage: InLocalStorage() }),
-    SplitFactorySlim({ ...config, storage: InLocalStorage(), sync: { localhostMode: LocalhostFromObject() } }) // slim factory requires localhostFromObject module
+    SplitFactorySlim({ ...config, storage: InLocalStorage() })
   ];
   const configs = [
-    { ...config, features: { ...config.features }, storage: InLocalStorage /* invalid */, sync: { localhostMode: LocalhostFromObject /* invalid */ } },
+    { ...config, features: { ...config.features }, storage: InLocalStorage /* invalid */ },
     { ...config },
     config,
   ];
-  const factoriesReady = [
+  const factories = [
     ...configs.map(config => SplitFactory(config)),
     ...factoriesReadyFromCache
   ];
-  const factoriesTimeout = [ // slim factory without a valid localhostFromObject module will timeout
-    SplitFactorySlim(config),
-    SplitFactorySlim({ ...config, sync: { localhostMode: LocalhostFromObject /* invalid */ } }),
-  ];
-  const factories = [...factoriesReady, ...factoriesTimeout];
 
-  let readyCount = 0, updateCount = 0, readyFromCacheCount = 0, timeoutCount = 0;
+  let readyCount = 0, updateCount = 0, readyFromCacheCount = 0;
 
   for (let i = 0; i < factories.length; i++) {
     const factory = factories[i], client = factory.client(), manager = factory.manager(), client2 = factory.client('other');
@@ -127,8 +118,7 @@ tape('Browser offline mode', function (assert) {
       updateCount++;
     });
     client.on(client.Event.SDK_READY_TIMED_OUT, () => {
-      assert.equal(factory.settings.sync.localhostMode, undefined);
-      timeoutCount++;
+      assert.fail('Should not emit SDK_READY_TIMED_OUT event');
     });
 
     const sdkReadyFromCache = (client) => () => {
@@ -253,8 +243,8 @@ tape('Browser offline mode', function (assert) {
       };
 
       // Update the features in all remaining factories except the last one
-      for (let i = 1; i < factoriesReady.length - 1; i++) {
-        factoriesReady[i].settings.features = factory.settings.features;
+      for (let i = 1; i < factories.length - 1; i++) {
+        factories[i].settings.features = factory.settings.features;
       }
 
       // Assigning a new object to the features property in the config object doesn't trigger an update
@@ -369,10 +359,9 @@ tape('Browser offline mode', function (assert) {
           assert.equal(sharedUpdateCount, 1, 'Shared client should have emitted SDK_UPDATE event once');
 
           // SDK events on other factory clients
-          assert.equal(readyCount, factoriesReady.length, 'Each factory client should have emitted SDK_READY event once');
-          assert.equal(updateCount, factoriesReady.length - 1, 'Each factory client except one should have emitted SDK_UPDATE event once');
+          assert.equal(readyCount, factories.length, 'Each factory client should have emitted SDK_READY event once');
+          assert.equal(updateCount, factories.length - 1, 'Each factory client except one should have emitted SDK_UPDATE event once');
           assert.equal(readyFromCacheCount, factoriesReadyFromCache.length * 2, 'The main and shared client of the factories with LOCALSTORAGE should have emitted SDK_READY_FROM_CACHE event');
-          assert.equal(timeoutCount, factoriesTimeout.length, 'The wrongly configured slim factories should have emitted SDK_READY_TIMED_OUT event');
 
           assert.end();
         });
