@@ -4,5 +4,4 @@ export { ErrorLogger } from '@splitsoftware/splitio-commons/src/logger/browser/E
 export { WarnLogger } from '@splitsoftware/splitio-commons/src/logger/browser/WarnLogger';
 export { InfoLogger } from '@splitsoftware/splitio-commons/src/logger/browser/InfoLogger';
 export { DebugLogger } from '@splitsoftware/splitio-commons/src/logger/browser/DebugLogger';
-export { LocalhostFromObject } from '@splitsoftware/splitio-commons/src/sync/offline/LocalhostFromObject';
 export { PluggableStorage } from '@splitsoftware/splitio-commons/src/storages/pluggable';
