@@ -7,11 +7,11 @@ import { sdkClientMethodCSFactory } from '@splitsoftware/splitio-commons/src/sdk
 import { BrowserSignalListener } from '@splitsoftware/splitio-commons/src/listeners/browser';
 import { impressionObserverCSFactory } from '@splitsoftware/splitio-commons/src/trackers/impressionObserver/impressionObserverCS';
 import { pluggableIntegrationsManagerFactory } from '@splitsoftware/splitio-commons/src/integrations/pluggable';
-
 import { IPlatform, ISdkFactoryParams } from '@splitsoftware/splitio-commons/src/sdkFactory/types';
 import { ISettings } from '@splitsoftware/splitio-commons/src/types';
 import { CONSUMER_MODE, CONSUMER_PARTIAL_MODE, LOCALHOST_MODE } from '@splitsoftware/splitio-commons/src/utils/constants';
 import { createUserConsentAPI } from '@splitsoftware/splitio-commons/src/consent/sdkUserConsent';
+import { localhostFromObjectFactory } from '@splitsoftware/splitio-commons/src/sync/offline/LocalhostFromObject';
 
 let syncManagerStandaloneFactory: ISdkFactoryParams['syncManagerFactory'];
 let syncManagerSubmittersFactory: ISdkFactoryParams['syncManagerFactory'];
@@ -51,7 +51,7 @@ export function getModules(settings: ISettings, platform: IPlatform): ISdkFactor
   switch (settings.mode) {
     case LOCALHOST_MODE:
       modules.splitApiFactory = undefined;
-      modules.syncManagerFactory = settings.sync.localhostMode;
+      modules.syncManagerFactory = localhostFromObjectFactory;
       modules.SignalListener = undefined;
       break;
     case CONSUMER_MODE:
