@@ -4,9 +4,7 @@ import { validateRuntime } from '@splitsoftware/splitio-commons/src/utils/settin
 import { validateStorageCS } from '@splitsoftware/splitio-commons/src/utils/settingsValidation/storage/storageCS';
 import { validatePluggableIntegrations } from '@splitsoftware/splitio-commons/src/utils/settingsValidation/integrations/pluggable';
 import { validateLogger } from '@splitsoftware/splitio-commons/src/utils/settingsValidation/logger/pluggableLogger';
-import { validateLocalhostWithDefault } from '@splitsoftware/splitio-commons/src/utils/settingsValidation/localhost/builtin';
 import { validateConsent } from '@splitsoftware/splitio-commons/src/utils/settingsValidation/consent';
-import { STANDALONE_MODE } from '@splitsoftware/splitio-commons/src/utils/constants';
 
 const params = {
   defaults,
@@ -15,15 +13,11 @@ const params = {
   storage: validateStorageCS,
   integrations: validatePluggableIntegrations,
   logger: validateLogger,
-  localhost: validateLocalhostWithDefault, // Full SplitFactory provides a default localhost module, except a valid one is provided
   consent: validateConsent,
 };
 
 export function settingsFactory(config: any) {
   const settings = settingsValidation(config, params);
-
-  // @ts-ignore, Override in localhost and consumer modes to emit SDK_READY event
-  if (settings.mode !== STANDALONE_MODE) settings.sync.largeSegmentsEnabled = false;
 
   return settings;
 }
