@@ -91,7 +91,6 @@ interface ISettings {
     impressionsMode: SplitIO.ImpressionsMode,
     enabled: boolean,
     flagSpecVersion: string,
-    localhostMode?: SplitIO.LocalhostFactory,
     requestOptions?: {
       getHeaderOverrides?: (context: { headers: Record<string, string> }) => Record<string, string>
     },
@@ -225,25 +224,6 @@ interface ISharedSettings {
      * @default 'OPTIMIZED'
      */
     impressionsMode?: SplitIO.ImpressionsMode,
-    /**
-     * Defines the factory function to instantiate the SDK in localhost mode.
-     *
-     * NOTE: this is only required if using the slim entry point of the library to init the SDK in localhost mode.
-     *
-     * For more information see {@link https://help.split.io/hc/en-us/articles/360058730852-Browser-SDK#localhost-mode}
-     *
-     * Example:
-     * ```typescript
-     * SplitFactory({
-     *   ...
-     *   sync: {
-     *     localhostMode: LocalhostFromObject()
-     *   }
-     * })
-     * ```
-     * @property {Object} localhostMode
-     */
-    localhostMode?: SplitIO.LocalhostFactory
     /**
      * Controls the SDK continuous synchronization flags.
      *
@@ -472,11 +452,6 @@ declare namespace SplitIO {
     [featureName: string]: string | TreatmentWithConfig
   };
   /**
-   * Localhost types.
-   * @typedef {string} LocalhostType
-   */
-  type LocalhostType = 'LocalhostFromObject'
-  /**
    * Object with information about an impression. It contains the generated impression DTO as well as
    * complementary information around where and how it was generated in that way.
    * @typedef {Object} ImpressionData
@@ -623,14 +598,6 @@ declare namespace SplitIO {
      * @property {Object} wrapper
      */
     wrapper: Object
-  }
-  /**
-   * Localhost mode factory.
-   * Its interface details are not part of the public API.
-   */
-  type LocalhostFactory = {
-    readonly type: LocalhostType
-    (params: {}): {}
   }
   /**
    * Impression listener interface. This is the interface that needs to be implemented
